# foreverbull-python

./: demo.py  new_test.py  pandas_demo.py  requirements.txt  setup.cfg  setup.py  simple_test.py
.github/workflows/: basic.yaml  main.yaml  release.yaml
docs/: conf.py
examples/: example.py
examples/ema/: Dockerfile
examples/ema_high_low/: Dockerfile  README.rst  ema.py
examples/first/: Dockerfile  example.py
examples/with_parameters/: Dockerfile  example.py
foreverbull/: __init__.py  __main__.py  exceptions.py  foreverbull.py  input_parser.py  models.py
foreverbull/backtest/: __init__.py  backtest.py
foreverbull/broker/: broker.py  models.py
foreverbull/broker/data/: __init__.py  data.py  stock_data.py
foreverbull/broker/http/: __init__.py  backtest.py  http.py  service.py
foreverbull/broker/socket/: __init__.py  models.py  router.py  socket.py
foreverbull/data/: __init__.py  data.py  stock_data.py
foreverbull/worker/: __init__.py  worker.py
tests/: conftest.py  sample_data.json  test_broker.py  test_broker_data.py  test_broker_http.py  test_broker_socket.py  test_cli.py  test_comp.py  test_end_to_end.py  test_foreverbull.py  test_input_parser.py  test_routes.py  test_worker.py
tests/data/: conftest.py  test_data.py
tests/worker/: test_worker.py
