[flake8]
max-line-length = 120

[metadata]
name=foreverbull
version=attr: src.VERSION
description=foreverbull
author=Henrik Nilsson
author_email=henrik@lhjnilsson.com
python_requires=>=3.8
classifiers=
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages= find:
install_requires=
    pandas>=1.3.2,<2.0.0
    foreverbull-core>=0.0.26
    requests>=2.26.0,<3.0.0
    sqlalchemy>=1.4.23,<2.0.0
    psycopg2-binary>=2.9.1,<3.0.0


[options.extras_require]
dev = 
    pytest>=6.2.4,<7.0.0
    pytest-mock>=3.6.1,<4.0.0
    flake8>=3.9.2,<4.0.0
    black>=21.7b0,<30
    isort>=5.9.3,<6.0.0
    pytest-cov
docs = 
    sphinx>=4.2.0,<5.0.0
    alablaster
